# bitwarden-dedup

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
bw_dedup/: runner.py
bw_dedup/dedup_utils/: __init__.py  _merge_duplicate_entries.py  _merge_folders.py
bw_dedup/dedup_utils/data_types/: __init__.py  _bw_data_map.py
test/: test_data.py  test_runner.py
test/test_dedup_utils/: test_discard_useless.py  test_merge_duplicate_entries.py  test_merge_folders.py
