[project]
name = "bitwarden_dedup"
version = "0.1.0"
description = "dedup passwords in bitwarden"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]
